# powerplant

./: Dockerfile  README.md  app.py  pyproject.toml  test_solver.py
