[tool.poetry]
name = "powerplant_coding_challenge"
version = "1.1.0"
description = ""
authors = ["yanavedel <yana.vedel@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^1.1.2"
Flask-RESTful = "^0.3.8"
pytest = "^6.2.2"
black = "^20.8b1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
